tests/fixtures/invalid/pow_none_list_set.py
# Cannot call pow() with None, List[int], Set[int]
x = pow(None, [1, 2, 3], {1, 2, 3})
